# Albus-Box

./: .gitattributes  .gitignore  LICENSE  README.md  ReadMe.txt  footer.html  header.html  index.html  style.css
Linux/: CMakeCache.txt  CMakeLists.txt  CMakeListsold.txt  Main.cpp  Makefile  Specific.cpp  Specific.hpp  build  cmake_install.cmake  run.sh
Linux/App/: Albus-Box  CMakeLists.txt  Main.cpp  Specific.cpp  Specific.hpp  gmon.out
Mac/Albus-Box/: icon.icns
Mac/Albus-Box/Albus-Box.xcodeproj/: project.pbxproj
Mac/Albus-Box/Albus-Box.xcodeproj/xcshareddata/xcschemes/: Albus-Box.xcscheme
Mac/Albus-Box/App/: .cbj
Mac/Albus-Box/App/Albus-Box.app/Contents/: Info.plist
Mac/Albus-Box/App/Albus-Box.app/Contents/Resources/assets/data/settings/: settings.json
Mac/Albus-Box/App/Albus-Box.app/Contents/_CodeSignature/: CodeResources
Mac/Albus-Box/App/Albus-Player.app/Contents/: Info.plist
Mac/Albus-Box/src/: AlbusBox.cpp  AlbusBox.hpp  Main.cpp  Player.cpp  Specific.cpp  Specific.hpp
Windows/: VS_変更点メモ.txt
Windows/Albus-Box/: Albus-Box.sln
Windows/Albus-Box/Albus-Box/: Albus-Box.vcxproj  Albus-Box.vcxproj.filters  Main.cpp  Specific.cpp  Specific.hpp
Windows/Albus-Box/Albus-Box/App/: log.txt  test.lyrics
Windows/Albus-Box/Albus-Box/App/data/settings/: settings.json
Windows/Albus-Box/Albus-Box/App/example/script/: piano.as
Windows/Albus-Box/Albus-Box/App/example/shader/glsl/: default3d_forward.frag  default3d_forward.vert  extract_bright_linear.frag  forward_fog.frag  forward_triplanar.frag  game_of_life.frag  grayscale.frag  homography.frag  homography.vert  multi_texture_blend.frag  multi_texture_mask.frag  poisson_disk.frag  posterize.frag  rgb_shift.frag  rgb_to_bgr.frag  soft_shape.vert  swirl.frag  terrain_forward.frag  terrain_forward.vert  terrain_normal.frag
Windows/Albus-Box/Albus-Box/App/example/shader/hlsl/: default2d.hlsl  default3d_forward.hlsl  extract_bright_linear.hlsl  forward_fog.hlsl  forward_triplanar.hlsl  game_of_life.hlsl  grayscale.hlsl  multi_texture_blend.hlsl  multi_texture_mask.hlsl  poisson_disk.hlsl  posterize.hlsl  rgb_shift.hlsl  rgb_to_bgr.hlsl  soft_shape.hlsl  swirl.hlsl  terrain_forward.hlsl  terrain_normal.hlsl
css/: header.css  style.css
js/: common.js
new/: footer.html  for_linux.html  header.html  include  index.html  lib
new/css/: for_linux.css  header.css  style.css
new/js/: select.js
old/: CNAME  index.html  style.css
src/: AlbusBox.cpp  AlbusBox.hpp  ButtonEx.hpp  Enums.hpp  Header.hpp  Lyrics.cpp  Lyrics.hpp  NeumorphismUI.cpp  NeumorphismUI.hpp  OtherFunctions.cpp  OtherFunctions.hpp  Player.cpp  Player.hpp  Structs.hpp
